# SomeBot

./: .gitignore  Cargo.toml  README.md
src/: local_tokens.rs  main.rs  operations.rs  order.rs  service.rs  state.rs  strategy.rs  trading_cfg.rs  user.rs  utils.rs
src/service/: order_service.rs
src/state/: candle_state.rs  last_price_state.rs  state.rs
src/strategy/: first_strategy.rs  hammer_strategy.rs  strategy.rs
src/utils/: candle.rs  cmp.rs  quotation.rs  wrapper_mock_system_time.rs
