[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.11.24"
tokio = { version = "1.0.0", features = ["rt", "time", "rt-multi-thread", "macros"] }
tinkoff-invest-api = { version = "0.2.3" }
futures = "0.3.30"
futures-util = "0.3.30"
flume = "0.11.0"
tonic = { version = "0.8.3",features = ["tls", "tls-roots", "gzip"] }
prost = {version = "0.11"}
prost-types = {version = "0.11"}
multimap = "0.10.0"
uuid = { version = "1.7.0", features = ["v4"] }
